k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nahid-pharmacy
  labels:
    app: nahid-pharmacy
